aws-ec2-webapp/route_table.tf
resource "aws_route_table" "public" {
  vpc_id = aws_vpc.test.id
  route {
cidr_block = "0.0.0.0/0"
gateway_id = aws_internet_gateway.gw.id
  }
  tags = { Name = "${var.project_name}-public-rt"}
}
resource "aws_route_table_association" "public_assoc" {
  subnet_id = aws_subnet.public.id
  route_table_id = aws_route_table.public.id
}
